Spacing/alignment fixing
fixing some spacing and attempt at adding a cloud

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
     border-radius: 0px 0px 0px 10px;
 }
 
+.navbar h1 {
+    padding-left: 60px;
+}
+
 .navbar img {
     float: left;
 }
@@ -19,10 +23,10 @@
    margin-left: auto;
    margin-right: 0 !important;
 }
-.collapse{
-  /*  background-color: cyan; */
+/* .collapse{
+ background-color: cyan;
+} */
 
-}
 .nav-link{
     display: inline-block;
     padding-left: 5%;
@@ -43,10 +47,21 @@ body {
     margin-left: 5%;
     margin-right: 5%
 }
+
+.cloudSmall{
+    padding-top:80px;
+    width: 25%;
+    z-index: -1;
+    position: absolute; 
+    top:0px;
+    left: 0px;
+}
+
 .fixed-bottom{
     width: 100%;
     z-index: -1;
 }
+
 
 /*Welcome Section*/
 #welcome{
